@@ -10,7 +10,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +22,7 @@ public class CommentServiceImpl implements CommentService {
     public List<CommentDTO> findAllComments() {
         return commentRepository.findAll().stream()
                 .map(commentMapper::toCommentDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -31,7 +30,7 @@ public class CommentServiceImpl implements CommentService {
         List<Comment> comments = commentRepository.findByAuthor(author);
         return comments.stream()
                 .map(commentMapper::toCommentDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -39,13 +38,14 @@ public class CommentServiceImpl implements CommentService {
         List<Comment> comments = commentRepository.findByEventId(eventId);
         return comments.stream()
                 .map(commentMapper::toCommentDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public CommentDTO findCommentById(String commentId) {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new RuntimeException("Comment not found"));
+
         return commentMapper.toCommentDTO(comment);
     }
 
@@ -64,6 +64,7 @@ public class CommentServiceImpl implements CommentService {
     public CommentDTO replyToComment(String parentId, CommentBaseDTO replyDetails) {
         Comment parentComment = commentRepository.findById(parentId)
                 .orElseThrow(() -> new RuntimeException("Parent comment not found"));
+
         Comment reply = new Comment();
         reply.setParentId(parentId);
         reply.setAuthor(replyDetails.author());
@@ -79,6 +80,7 @@ public class CommentServiceImpl implements CommentService {
     public CommentDTO addLike(String commentId, String userId) {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new RuntimeException("Comment not found"));
+
         comment.likeComment(userId);
         comment = commentRepository.save(comment);
         return commentMapper.toCommentDTO(comment);
@@ -88,6 +90,7 @@ public class CommentServiceImpl implements CommentService {
     public CommentDTO removeLike(String commentId, String userId) {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new RuntimeException("Comment not found"));
+
         comment.unlikeComment(userId);
         comment = commentRepository.save(comment);
         return commentMapper.toCommentDTO(comment);
@@ -98,6 +101,7 @@ public class CommentServiceImpl implements CommentService {
     public void deleteComment(String commentId) {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new RuntimeException("Comment not found"));
+
         deleteReplies(comment);
         commentRepository.deleteById(commentId);
     }
